# agentic-pipeline-langpro

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md  snli_train_entailment_1k.jsonl
prompts/: failure_analysis.txt  knowledge_generation.txt  knowledge_refinement.txt
src/agentic_pipeline_langpro/: __init__.py  __main__.py  agent_llm.py  cli.py  critic.py  langpro_trace.py  llm_config.py  paths.py  pipeline.py  prompts.py  results.py  types.py
src/kbprojection/: LICENSE  __init__.py  async_runtime.py  downloads.py  easyccg_vendor.py  filtering.py  langpro.py  langpro_cache.py  llm.py  local_easyccg.py  models.py  prompts.py  settings.py
src/kbprojection/loaders/: __init__.py  base.py  sick.py  snli.py
