[project]
name = "agentic-pipeline-langpro"
version = "1.0.0"
description = "Generate-prove-refine: agentic LLM knowledge-base generation for the LangPro natural-logic theorem prover."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    # LangPro API + LLM substrate (vendored kbprojection package)
    "requests>=2.31.0,<3",
    "httpx>=0.28.1,<0.29",
    "pydantic>=2.9.0,<3",
    "openai>=1.50.0,<2",
    "anthropic>=0.34.0,<0.35",
    "google-genai>=1.66.0,<2",
    "nltk>=3.9,<4",
    "sentence-transformers>=3.1.0,<4",
    "torch>=2.0.0",
    "tqdm>=4.66.0,<5",
]

[project.scripts]
agentic-pipeline-langpro = "agentic_pipeline_langpro.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_pipeline_langpro", "src/kbprojection"]
